<resources>
    <string name="app_name">PhotoFlow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>
    <string name="photo_detail">Photo Details</string>
    <string name="photo_location">Photo Location</string>
    <string name="choose_cover">Choose Cover</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="shared_url">Shared URL</string>
    <string name="choose_profile_picture">Choose Profile Picture</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_file_name">File Name</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="action_upload_file">Upload File</string>
    <string name="action_save_album">Save Album</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Not valid email</string>
    <string name="settings">Settings</string>
    <string name="invalid_file_name">Not a valid file name</string>
    <string name="invalid_title">Not a valid title</string>
    <string name="invalid_tags">Not valid tags</string>
    <string name="invalid_album_title">Not a valid album title</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Registration failed"</string>
    <string name="file_upload_failed">"File upload failed"</string>
    <string name="file_upload_worked">"File upload worked"</string>
    <string name="fragment_album_detail">"Photos in album"</string>
    <string name="error_updating_picture">"Error updating profile picture"</string>
        <string name="base_url">http://192.168.0.145:8000</string>
<!-- <string name="base_url">http://ec2-13-60-9-150.eu-north-1.compute.amazonaws.com:8000</string>-->
</resources>