<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.photoflow.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.photoflow.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    
    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.photoflow.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_photo_detail"
        android:name="com.example.photoflow.ui.gallery.PhotoDetailFragment"
        android:label="@string/photo_detail"
        tools:layout="@layout/fragment_photo_detail" />
    <fragment
        android:id="@+id/nav_choose_cover_fragment"
        android:name="com.example.photoflow.ui.home.ChooseCoverFragment"
        android:label="@string/choose_cover"
        tools:layout="@layout/fragment_choose_cover" />
    <fragment
        android:id="@+id/nav_album_detail_fragment"
        android:name="com.example.photoflow.ui.home.AlbumDetailFragment"
        tools:layout="@layout/fragment_album_detail"
        android:label="Album Detail" />
    <fragment
        android:id="@+id/nav_choose_photo_fragment"
        android:name="com.example.photoflow.ui.home.ChoosePhotoFragment"
        android:label="@string/choose_photo"
        tools:layout="@layout/fragment_choose_cover" />
    <fragment
        android:id="@+id/nav_shared_url"
        android:name="com.example.photoflow.ui.share.SharedUrlFragment"
        android:label="@string/shared_url"
        tools:layout="@layout/fragment_shared_url" />
</navigation>